# conversor-tools

./: .gitignore  Cargo.toml  README.md
service/: conversor.service
src/: api.rs  main.rs  state.rs
src/compressor/: audio.rs  jpeg.rs  mod.rs  mp4.rs  pdf.rs  png.rs
src/utils/: ffmpeg_progress.rs  mod.rs
static/: app.js  index.html  style.css
